--- a/AndreiPortifolio/css/style.css
+++ b/AndreiPortifolio/css/style.css
@@ -1,17 +1,34 @@
+body {
+    background: #a6a4a4;
+}
 
+.header {
+    background: url("../img/bgtec.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
 
 .header img{
- width: 30vw;
- height: 30vw;
- margin-left: 34%;
+ width: 25vw;
+ height: 25vw;
+ margin-left: 39%;
 }
 
 .mainav {
     
-    margin-top: 1%;
-    height: 18px;
+    margin-top: -0.3%;
+    height: 30px;
     border: 1px solid black;
+    background: #7f7971;
+    color: azure;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 25px;
+    padding: 2px;
+    -webkit-text-stroke-width: 0.5px;
+    -webkit-text-stroke-color: #000;
 }
+
+
 
 .mainav ul,li{
     display: inline;
@@ -21,7 +38,7 @@
 
 .mainav ul{
 
-    margin-left: 38%;
+    margin-left: 37%;
 }
 
 .redondo{
